--- a/src/pages/Templates/Template2.module.css
+++ b/src/pages/Templates/Template2.module.css
@@ -141,3 +141,16 @@
   font-family: 'Lato', sans-serif;
   text-transform: uppercase;
 }
+
+.hello {
+  color: white !important;
+  transition: color 0.2s ease-in-out;
+  font-weight:500;
+  border-bottom: 1px solid white!important;
+}
+
+.hello:hover {
+  color: var(--cardboard) !important;
+  border-bottom: 1px solid var(--cardboard) !important;
+
+}
